; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx88/extr_cx88-blackbird.c_blackbird_unregister_video.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx88/extr_cx88-blackbird.c_blackbird_unregister_video.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cx8802_dev = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cx8802_dev*)* @blackbird_unregister_video to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @blackbird_unregister_video(%struct.cx8802_dev* %0) #0 {
  %2 = alloca %struct.cx8802_dev*, align 8
  store %struct.cx8802_dev* %0, %struct.cx8802_dev** %2, align 8
  %3 = load %struct.cx8802_dev*, %struct.cx8802_dev** %2, align 8
  %4 = getelementptr inbounds %struct.cx8802_dev, %struct.cx8802_dev* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %26

7:                                                ; preds = %1
  %8 = load %struct.cx8802_dev*, %struct.cx8802_dev** %2, align 8
  %9 = getelementptr inbounds %struct.cx8802_dev, %struct.cx8802_dev* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i64 @video_is_registered(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %7
  %14 = load %struct.cx8802_dev*, %struct.cx8802_dev** %2, align 8
  %15 = getelementptr inbounds %struct.cx8802_dev, %struct.cx8802_dev* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @video_unregister_device(i32* %16)
  br label %23

18:                                               ; preds = %7
  %19 = load %struct.cx8802_dev*, %struct.cx8802_dev** %2, align 8
  %20 = getelementptr inbounds %struct.cx8802_dev, %struct.cx8802_dev* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @video_device_release(i32* %21)
  br label %23

23:                                               ; preds = %18, %13
  %24 = load %struct.cx8802_dev*, %struct.cx8802_dev** %2, align 8
  %25 = getelementptr inbounds %struct.cx8802_dev, %struct.cx8802_dev* %24, i32 0, i32 0
  store i32* null, i32** %25, align 8
  br label %26

26:                                               ; preds = %23, %1
  ret void
}

declare dso_local i64 @video_is_registered(i32*) #1

declare dso_local i32 @video_unregister_device(i32*) #1

declare dso_local i32 @video_device_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
